apps/obsidian/obsidian.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian
  labels:
    app: obsidian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      containers:
        - name: obsidian
          image: obsidian
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: obsidian-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: obsidian
